--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Allensolly</title>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="website Icon" type="png" href="./images/aln-sly.png">
-    <link rel="stylesheet" href="./Css/style2.css">
+    <link rel="stylesheet" href="./css/style2.css">
 
 </head>
 
