--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="left">
             <div class="flex1">
                 <div class="a"><img src="./images/download.png" alt=""></div>
-                <div class="b"><img src="./Images/addi.png" alt="no image"></div>
-                <div class="c"><img src="./Images/puma.jpg" alt="no image"></div>
-                <div class="d"><img src="./Images/van.png" alt="no image"></div>
+                <div class="b"><img src="./images/addi.png" alt="no image"></div>
+                <div class="c"><img src="./images/puma.jpg" alt="no image"></div>
+                <div class="d"><img src="./images/van.png" alt="no image"></div>
             </div>
         </div>
         <div class="right">
@@ -35,7 +35,7 @@
                 <div class="love"><i class="fa fa-heart" aria-hidden="true"></i></div>
                 <div class="vl" id="v-l"></div>
                 <div class="cart"><i class="fa fa-shopping-cart" aria-hidden="true"></i></div>
-                <div class="Aditya"><img src="./Images/Aditya_Birla_Group_Logo.svg.png" alt="no image"></div>
+                <div class="Aditya"><img src="./images/Aditya_Birla_Group_Logo.svg.png" alt="no image"></div>
 
             </div>
 
