--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
         <div class="left">
             <div class="flex1">
                 <div class="a"><img src="./images/download.png" alt=""></div>
-                <div class="b"><img src="./Images/addi.png" alt="no image"></div>
-                <div class="c"><img src="./Images/puma.jpg" alt="no image"></div>
-                <div class="d"><img src="./Images/van.png" alt="no image"></div>
+                <div class="b"><img src="./images/addi.png" alt="no image"></div>
+                <div class="c"><img src="./images/puma.jpg" alt="no image"></div>
+                <div class="d"><img src="./images/van.png" alt="no image"></div>
             </div>
         </div>
         <div class="right">
